--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,9 +3,9 @@
 <!-- 	<meta name="viewport" width="device-width, initial-scale=1.0"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="description" content="{{ page.description }}">
-	<meta name="author" content="Alejandra López Villegas">
-	<meta name="keywords" content="Alejandra, López Villegas, comparative, politics, Michigan State University, MSU, political, science, methodology, democratic, backsliding, gender, parties, elections, propaganda, latam, latin, america, vaw, women poli, sci">
-	<title>{{ page.title }} | Alejandra López Villegas </title>		
+	<meta name="author" content="Caleb Lucas">
+	<meta name="keywords" content="Caleb, Lucas, RAND, international, relations, Michigan State University, MSU, political, science, methodology, conflict, civil war, media, terrorism, terrorist, propaganda, arabic, mena, rebel, rebels, non-state, violent, violence, syria, lebanon, poli, sci">
+	<title>{{ page.title }} | Caleb Lucas </title>		
 	<!-- styles -->
 	<link href="/css/bootstrap.css" rel="stylesheet">
 	<link href="/css/jumbotron-narrow.css" rel="stylesheet">
