--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,17 +3,18 @@
 <!-- 	desktop header -->
 <!--   	<ul class="nav nav-pills pull-right hidden-xs hidden-sm"> -->
   	<ul class="nav nav-pills nav-justified visible-xs visible-sm">
-		<li class="{{ page.about }}"><a href="/" title="About Alejandra López Villegas">About</a></li>
+		<li class="{{ page.about }}"><a href="/" title="About Caleb Lucas">About</a></li>
 		<li class="{{ page.research }}"><a href="/research" title="Research">Research</a></li>
-		<li class="{{ page.cv }}"><a href="/files/CV_Lopez_Villegas_Eng (1).pdf" target="_blank" title="CV">CV</a></li>
+		<li class="{{ page.software }}"><a href="/software" title="Software">Software</a></li>
+		<li class="{{ page.cv }}"><a href="/files/caleb_lucas_cv.pdf" target="_blank" title="CV">CV</a></li>
 		<li class="{{ page.contact }}"><a href="/contact" title="Contact">Contact</a></li>
 	</ul>
 
 	<ul class="nav nav-pills pull-right hidden-xs hidden-sm">
-		<li class="{{ page.about }}"><a href="/" title="About Alejandra López Villegas">About</a></li>
+		<li class="{{ page.about }}"><a href="/" title="About Caleb Lucas">About</a></li>
 		<li class="{{ page.research }}"><a href="/research" title="Research">Research</a></li>
 		<li class="{{ page.software }}"><a href="/software" title="Software">Software</a></li>
-		<li class="{{ page.cv }}"><a href="/files/CV_Lopez_Villegas_Eng (1).pdf" target="_blank" title="CV">CV</a></li>
+		<li class="{{ page.cv }}"><a href="/files/caleb_lucas_cv.pdf" target="_blank" title="CV">CV</a></li>
 		<li class="{{ page.contact }}"><a href="/contact" title="Contact">Contact</a></li>
 	</ul>
 	
@@ -23,14 +24,14 @@
           <span class="caret"></span></button>
           <ul class="dropdown-menu">
             <li><a data-toggle="collapse" data-target=".navbar-collapse" href="/"><big>About</big></a></li>
-            <li><a data-toggle="collapse" data-target=".navbar-collapse" href="/files/CV_Lopez_Villegas_Eng (1).pdf"><big>CV</big></a></li>
+            <li><a data-toggle="collapse" data-target=".navbar-collapse" href="/files/caleb_lucas_cv.pdf"><big>CV</big></a></li>
             <li><a data-toggle="collapse" data-target=".navbar-collapse" href="/contact"><big>Contact</big></a></li>
           </ul>
 	</div> -->
 	
 <!-- 	display my name as hyperlink to home -->
   	<div class="hidden-xs hidden-sm">
-	<h3><a href="/">Alejandra López Villegas</a></h3>
+	<h3><a href="/">Caleb Lucas</a></h3>
 	</div>
 	
 </div> <!-- /header -->
